--- a/index.html
+++ b/index.html
@@ -12,26 +12,24 @@
 
   <body>
     <header>S E I &nbsp;&nbsp;&nbsp; T I C - T A C - T O E</header>
-    <main>
-      <div id="board">
-        <div id="row1">
-          <span id="box1">A</span>
-          <span id="box2">B</span>
-          <span id="box3">C</span>
-        </div>
-
-        <div id="row2">
-          <span id="box4">D</span>
-          <span id="box5">E</span>
-          <span id="box6">F</span>
-        </div>
-
-        <div id="row3">
-          <span id="box7">G</span>
-          <span id="box8">H</span>
-          <span id="box9">I</span>
-        </div>
-      </div>
-    </main>
+    <table id="board">
+      <tbody>
+        <tr id="row1">
+          <td id="cell1"></td>
+          <td id="cell2"></td>
+          <td id="cell3"></td>
+        </tr>
+        <tr id="row2">
+          <td id="cell4"></td>
+          <td id="cell5"></td>
+          <td id="cell6"></td>
+        </tr>
+        <tr id="row3">
+          <td id="cell7"></td>
+          <td id="cell8"></td>
+          <td id="cell9"></td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
