--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   </head>
 
   <body>
-    <header>S E I &nbsp;&nbsp;&nbsp; T I C - T A C - T O E</header>
+    <header><strong>S E I &nbsp;&nbsp;&nbsp; T I C - T A C - T O E</strong></header>
+    <h1 id="msg">hello</h1>
     <table id="board">
       <tbody>
         <tr id="row1">
-          <td id="cell1"></td>
-          <td id="cell2"></td>
-          <td id="cell3"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
         </tr>
         <tr id="row2">
-          <td id="cell4"></td>
-          <td id="cell5"></td>
-          <td id="cell6"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
         </tr>
         <tr id="row3">
-          <td id="cell7"></td>
-          <td id="cell8"></td>
-          <td id="cell9"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
+          <td id="cell"></td>
         </tr>
       </tbody>
     </table>
+    <button id="replay">Reset</button>
   </body>
 </html>
