removing test message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <header><strong>S E I &nbsp;&nbsp;&nbsp; T I C - T A C - T O E</strong></header>
-    <h1 id="msg">hello</h1>
+    <h1 id="msg"></h1>
     <table id="board">
       <tbody>
         <tr id="row1">
